wrote skeleton html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Nicholas Samples</h1>
+        <nav>
+            <a class="button" href="index.html">Home</a>
+            <a class="button" href="about.html">About</a>
+            <a class="button" href="projects.html">Projects</a>
+            <a class="button" href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <section class="intro">
+        <div id="photo">
+
+        </div>
+        <div id="text">
+            <h2>Nicholas Samples</h2>
+            <button href="projects.html">My Projects</button>
+            <p>I'm taking the leap.  With no prior experience, and with great dissatisfaction for how my life was going, I decided to take charge and change my life by joining Lambda School's program in Web Development!  I have never been happier or more excited!  In my free time, I play video games or go on long hikes.  Bring on the next chapter!</p>
+        </div>
+    </section>
+    <section class="gallery">
+        <img src="https://picsum.photos/536/354">
+        <img src="https://picsum.photos/536/354">
+        <img src="https://picsum.photos/536/354">
+        <img src="https://picsum.photos/536/354">
+        <img src="https://picsum.photos/536/354">
+        <img src="https://picsum.photos/536/354">
+        <img src="https://picsum.photos/536/354">
+        <img src="https://picsum.photos/536/354">
+    </section>
+    <footer>
+        <h3>Want to know more?</h3>
+        <button href="contact.html">Contact Me!</button>
+        <p>
+            <a class="social" href="#">LinkedIn</a>
+            <a class="social" href="#">GitHub</a>
+            <a class="social" href="#">Instagram</a>
+        </p>
+        <p>Copyright Nicholas Samples (c) 2021</p>
+    </footer>
 </body>
 </html>
